update with initial commit

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,17 +5,14 @@
 		<div class="col-sm-4">
 
 		  <p>&copy 2023 QUEST-UWM. Site lift: <a href="http://www.allanlab.org/"> Allan Lab</a>;</p>
-              <p>We are part of the <a href="https://cdis.wisc.edu/">CDIS</a> at <a href="https://www.wisc.edu/">University of Wisconsin - Madison</a>.</p>
+              <p>We are part of the Computer Sciences department, in <a href="https://cdis.wisc.edu/">CDIS</a> at <a href="https://www.wisc.edu/">University of Wisconsin - Madison</a>.</p>
 		   <p>  
 
 
 		</div>
 		<div class="col-sm-4">
 		  Funding:<br />
-		  We are grateful for funding from <a href="https://erc.europa.eu/funding/starting-grants">grant 1 </a>, and from an <a href="https://erc.europa.eu/funding/starting-grants">grant 2 </a>
-      <!-- - StG and CoG from the <a href="https://erc.europa.eu">ERC</a><br />
-		  - <a href="http://www.nwo.nl/en/research-and-results/programmes/Talent+Scheme">Vidi </a> and <a href='https://www.fom.nl/en/news/press-releases/2016/11/18/28634/'>Projectruimte</a> grants from <a href="http://www.nwo.nl">NWO</a> <br />
-		  - <a href="https://www.universiteitleiden.nl/en/research/research-projects/science/frontiers-of-nanoscience-nanofront">Frontier of Nanosciences</a>, a gravity program from <a href="http://www.nwo.nl">NWO</a> -->
+		  Our research is funded by the generous support from NSF and Office of the VCRGE, UW-Madison
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
